<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/btnFacturacion"
        android:layout_width="395dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/addbill"
        android:text="@string/facturaci_n"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlbumes"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAlbumes"
        android:layout_width="395dp"
        android:layout_height="121dp"
        android:background="?attr/colorControlNormal"
        android:drawableStart="@drawable/addalbum"
        android:text="@string/lbumes"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnFacturacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClientes" />

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="395dp"
        android:layout_height="121dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/adduser"
        android:text="@string/clientes"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnAlbumes"
        app:layout_constraintEnd_toEndOf="@+id/btnAlbumes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAlbumes"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/tienda_de_m_sica"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</android.support.constraint.ConstraintLayout>